syntax = "proto3";

package chain.middleware.app.coin.exchangerate.v1;

option go_package = "github.com/NpoolPlatform/kunman/message/chain/middleware/v1/app/coin/exchangerate";

import "basetypes/v1/conds.proto";

message ExchangeRateReq {
  optional uint32 ID = 9;
  optional string EntID = 10;
  optional string AppID = 20;
  optional string CoinTypeID = 30;
  optional string MarketValue = 40;
  optional string SettleValue = 50;
  optional uint32 SettlePercent = 60;
  repeated string SettleTips = 61;
  optional string Setter = 70;
  optional uint32 DeletedAt = 80;
}

message ExchangeRate {
  // @inject_tag: sql:"id"
  uint32 ID = 9;
  // @inject_tag: sql:"ent_id"
  string EntID = 10;
  // @inject_tag: sql:"app_id"
  string AppID = 20;
  // @inject_tag: sql:"coin_type_id"
  string CoinTypeID = 30;
  // @inject_tag: sql:"market_value"
  string MarketValue = 40;
  // @inject_tag: sql:"settle_value"
  string SettleValue = 50;
  // @inject_tag: sql:"settle_percent"
  uint32 SettlePercent = 60;
  // @inject_tag: sql:"settle_tips"
  string SettleTipsStr = 62;
  repeated string SettleTips = 61;
  // @inject_tag: sql:"setter"
  string Setter = 70;
  // @inject_tag: sql:"created_at"
  uint32 CreatedAt = 80;
  // @inject_tag: sql:"updated_at"
  uint32 UpdatedAt = 90;
}

message Conds {
  optional basetypes.v1.StringVal EntID = 10;
  optional basetypes.v1.StringVal AppID = 20;
  optional basetypes.v1.StringVal CoinTypeID = 30;
}

